package example.marcers;

public interface Device {
}
