package example.marcers;

public interface IDevice {
     boolean isWorking();
}
