package example.service;

import example.device.CoffeeMachine;

public interface ICoffee {
    CoffeeMachine makeCoffee();

}
