package example.service;

import example.device.TelephoneBoth;

public interface IColl {
    TelephoneBoth makeColl();
}
