package example.service;

import example.device.Printer;

public interface IPrint {
    Printer makePrint();
}
